syntax = "proto3";

package com.road.yishi.proto.consortia;

message ConsortiaUserOfferReqMsg {
  int32 offerGold = 1;
  int32 offerPoint = 2;
  int32 payType = 3;
}
