syntax = "proto3";

package com.road.yishi.proto.consortia;

message ConsortiaVotingReqMsg {
  int32 votingUser = 1;
}
